adds form elements into html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,65 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title></title>
+    <title>Build Your Pizza</title>
   </head>
   <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Pizza!!</h1>
+      </div>
+      <form>
+      <div class="radio">
+        <label>
+          <input type="radio" name="size" value="twelveInch" checked>
+          12 Inch
+        </label>
+        </div>
+        <div class="radio">
+        <label>
+          <input type="radio" name="size" value="twentyInch">
+          20 Inch
+        </label>
+        </div>
+      </form>
+      <form>
+        <div class="checkbox">
+          <label>
+          <input type="checkbox" name="toppings" value="pepperoni">
+          Pepperoni
+          </label>
+          <label>
+          <input type="checkbox" name="toppings" value="sausage">
+          Sausage
+          </label>
+          <label>
+          <input type="checkbox" name="toppings" value="olives">
+          Olives
+          </label>
+          <label>
+          <input type="checkbox" name="toppings" value="peppers">
+          Peppers
+          </label>
+          <label>
+          <input type="checkbox" name="toppings" value="onions">
+          Onions
+          </label>
+          <label>
+          <input type="checkbox" name="toppings" value="garlic">
+          Garlic
+          </label>
+          <label>
+          <input type="checkbox" name="toppings" value="ham">
+          Ham
+          </label>
+          <label>
+          <input type="checkbox" name="toppings" value="pineapple">
+          Pineapple
+          </label>
+        </div>
+      </form>
+    </div>
+
 
   </body>
 </html>
