add work on linking html and js.

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       <form>
       <div class="radio">
         <label>
-          <input type="radio" name="size" value="twelveInch" checked>
+          <input type="radio" name="size" value="twelveInch" id="twelveInch" checked>
           12 Inch
         </label>
         </div>
         <div class="radio">
         <label>
-          <input type="radio" name="size" value="twentyInch">
+          <input type="radio" name="size" value="twentyInch" id="twentyInch" checked>
           20 Inch
         </label>
         </div>
@@ -30,39 +30,40 @@
       <form>
         <div class="checkbox">
           <label>
-          <input type="checkbox" name="toppings" value="pepperoni">
+          <input type="checkbox" name="toppings" id="toppings" value="pepperoni">
           Pepperoni
           </label>
           <label>
-          <input type="checkbox" name="toppings" value="sausage">
+          <input type="checkbox" name="toppings" id="toppings" value="sausage">
           Sausage
           </label>
           <label>
-          <input type="checkbox" name="toppings" value="olives">
+          <input type="checkbox" name="toppings" id="toppings" value="olives">
           Olives
           </label>
           <label>
-          <input type="checkbox" name="toppings" value="peppers">
+          <input type="checkbox" name="toppings" id="toppings" value="peppers">
           Peppers
           </label>
           <label>
-          <input type="checkbox" name="toppings" value="onions">
+          <input type="checkbox" name="toppings" id="toppings" value="onions">
           Onions
           </label>
           <label>
-          <input type="checkbox" name="toppings" value="garlic">
+          <input type="checkbox" name="toppings" id="toppings" value="garlic">
           Garlic
           </label>
           <label>
-          <input type="checkbox" name="toppings" value="ham">
+          <input type="checkbox" name="toppings" id="toppings" value="ham">
           Ham
           </label>
           <label>
-          <input type="checkbox" name="toppings" value="pineapple">
+          <input type="checkbox" name="toppings" id="toppings" value="pineapple">
           Pineapple
           </label>
         </div>
       </form>
+      <button type="button" class="btn btn-dark" id="submitBtn">Submit</button>
     </div>
 
 
