some commits not showing in github

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       <form>
       <div class="radio">
         <label>
-          <input type="radio" name="size" value="twelveInch" id="twelveInch" checked>
+          <input type="radio" name="size" value="twelveInch" id="size" checked>
           12 Inch
         </label>
         </div>
         <div class="radio">
         <label>
-          <input type="radio" name="size" value="twentyInch" id="twentyInch" checked>
+          <input type="radio" name="size" value="twentyInch" id="size" checked>
           20 Inch
         </label>
         </div>
