add some css styling

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Pizza!!</h1>
+        <h1>PIZZA</h1>
+        <h2>Build It:Buy It</h2>
       </div>
+
       <form>
       <div class="radio">
         <label>
@@ -63,7 +65,8 @@
           </label>
         </div>
       </form>
-      <button type="button" class="btn btn-dark" id="submitBtn">Submit</button>
+            <button type="button" class="btn btn-dark" id="submitBtn">Submit</button>
+
     </div>
 
 
