add researching document ready issues.

--- a/index.html
+++ b/index.html
@@ -12,65 +12,65 @@
     <div class="container">
       <div class="jumbotron">
         <h1>PIZZA|AZZIP</h1>
-        <h2>Build It | Buy It</h2>
+        <h2>You Build It <br> You Buy It</h2>
       </div>
 
       <form id="form">
-      <div class="radio">
-        <label>
-          <input type="radio" name="size" value="twelveInch" id="size" checked>
-          12 Inch
-        </label>
-        </div>
         <div class="radio">
-        <label>
-          <input type="radio" name="size" value="twentyInch" id="size" checked>
-          20 Inch
-        </label>
-        </div>
+          <label>
+            <input type="radio" name="size" value="twelveInch" id="size" checked>
+            12 Inch
+          </label>
+          </div>
+          <div class="radio">
+          <label>
+            <input type="radio" name="size" value="twentyInch" id="size" checked>
+            20 Inch
+          </label>
+          </div>
 
-        <div class="checkbox">
-          <label>
-          <input type="checkbox" name="toppings" id="toppings" value="pepperoni">
-          Pepperoni
-          </label>
-          <label>
-          <input type="checkbox" name="toppings" id="toppings" value="sausage">
-          Sausage
-          </label>
-          <label>
-          <input type="checkbox" name="toppings" id="toppings" value="olives">
-          Olives
-          </label>
-          <label>
-          <input type="checkbox" name="toppings" id="toppings" value="peppers">
-          Peppers
-          </label>
-          <br>
-          <label>
-          <input type="checkbox" name="toppings" id="toppings" value="onions">
-          Onions
-          </label>
-          <label>
-          <input type="checkbox" name="toppings" id="toppings" value="garlic">
-          Garlic
-          </label>
-          <label>
-          <input type="checkbox" name="toppings" id="toppings" value="ham">
-          Ham
-          </label>
-          <label>
-          <input type="checkbox" name="toppings" id="toppings" value="pineapple">
-          Pineapple
-          </label>
-        </div>
+          <div class="checkbox">
+            <label>
+            <input type="checkbox" name="toppings" id="toppings" value="pepperoni">
+            Pepperoni
+            </label>
+            <label>
+            <input type="checkbox" name="toppings" id="toppings" value="sausage">
+            Sausage
+            </label>
+            <label>
+            <input type="checkbox" name="toppings" id="toppings" value="olives">
+            Olives
+            </label>
+            <label>
+            <input type="checkbox" name="toppings" id="toppings" value="peppers">
+            Peppers
+            </label>
+            <br>
+            <label>
+            <input type="checkbox" name="toppings" id="toppings" value="onions">
+            Onions
+            </label>
+            <label>
+            <input type="checkbox" name="toppings" id="toppings" value="garlic">
+            Garlic
+            </label>
+            <label>
+            <input type="checkbox" name="toppings" id="toppings" value="ham">
+            Ham
+            </label>
+            <label>
+            <input type="checkbox" name="toppings" id="toppings" value="pineapple">
+            Pineapple
+            </label>
+          </div>
       </form>
             <button type="button" class="btn btn-dark" id="submitBtn">Submit</button>
 
     </div>
     <div id="orderConfirmation" class="card">
-      <h2>Order Summary:</h2>
-      <h2>Order Total:</h2>
+      <h2>Order Summary: <span></span></h2>
+      <h2>Order Total: <span></span></h2>
 
     </div>
 
