--- a/index.html
+++ b/index.html
@@ -18,59 +18,60 @@
       <form id="form">
         <div class="radio">
           <label>
-            <input type="radio" name="size" value="twelveInch" id="size" checked>
+            <input type="radio" name="size" value="twelveInch" class="size" checked>
             12 Inch
           </label>
           </div>
           <div class="radio">
           <label>
-            <input type="radio" name="size" value="twentyInch" id="size" checked>
+            <input type="radio" name="size" value="twentyInch" class="size" checked>
             20 Inch
           </label>
           </div>
 
           <div class="checkbox">
             <label>
-            <input type="checkbox" name="toppings" id="toppings" value="pepperoni">
+            <input type="checkbox" name="toppings" class="toppings" value="pepperoni">
             Pepperoni
             </label>
             <label>
-            <input type="checkbox" name="toppings" id="toppings" value="sausage">
+            <input type="checkbox" name="toppings" class="toppings" value="sausage">
             Sausage
             </label>
             <label>
-            <input type="checkbox" name="toppings" id="toppings" value="olives">
+            <input type="checkbox" name="toppings" class="toppings" value="olives">
             Olives
             </label>
             <label>
-            <input type="checkbox" name="toppings" id="toppings" value="peppers">
+            <input type="checkbox" name="toppings" class="toppings" value="peppers">
             Peppers
             </label>
             <br>
             <label>
-            <input type="checkbox" name="toppings" id="toppings" value="onions">
+            <input type="checkbox" name="toppings" class="toppings" value="onions">
             Onions
             </label>
             <label>
-            <input type="checkbox" name="toppings" id="toppings" value="garlic">
+            <input type="checkbox" name="toppings" class="toppings" value="garlic">
             Garlic
             </label>
             <label>
-            <input type="checkbox" name="toppings" id="toppings" value="ham">
+            <input type="checkbox" name="toppings" class="toppings" value="ham">
             Ham
             </label>
             <label>
-            <input type="checkbox" name="toppings" id="toppings" value="pineapple">
+            <input type="checkbox" name="toppings" class="toppings" value="pineapple">
             Pineapple
             </label>
           </div>
+        <button type="submit" class="btn btn-dark" class="submitBtn">Submit</button>
       </form>
-            <button type="button" class="btn btn-dark" id="submitBtn">Submit</button>
+
 
     </div>
     <div id="orderConfirmation" class="card">
-      <h2>Order Summary: <span></span></h2>
-      <h2>Order Total: <span></span></h2>
+      <h2>Order Summary: <span id="summary"></span></h2>
+      <h2>Order Total: <span id="total"></span></h2>
 
     </div>
 
