finished document ready section to show results

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
     <div id="orderConfirmation" class="card">
       <h2>Order Summary: <span id="summary"></span></h2>
-      <h2>Order Total: <span id="total"></span></h2>
+      <h2>Order Total: $<span id="total"></span></h2>
 
     </div>
 
