--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       <div id="orderConfirmation" class="card">
         <h2>Order Summary: <span id="summary"></span></h2>
         <h2>Order Total: $<span id="total"></span></h2>
+        <img src="" id='hut'>
 
       </div>
     </div>
